allprojects {
    buildscript {
        repositories {
            mavenCentral()
        }
        dependencies {
            classpath 'com.guardsquare:proguard-gradle:7.2.2'
        }
    }

    apply plugin: 'java'
    apply plugin: 'maven-publish'

    java {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
    }

    group = 'com.github.albertoruibal.carballo'
    version = '1.8'

    repositories {
        mavenCentral()
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }
}
